# KalshiMonorepo

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY_FILL_FIX.md  DOCKER_DEPLOYMENT.md  Dockerfile  FILL_CORRECTNESS_PLAN.md  FILL_DEDUP_FIX.md  FILL_FIX_ROOT_CAUSE.md  FILL_VALIDITY_GATE.md  FIXES_APPLIED.md  LOGGING_GUIDE.md  OPTION_C_FILL_INGESTION_FIX.md  README.md  TWO_SIDED_QUOTING_REFACTOR.md  docker-compose.mm.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_kalshi_call.py
.github/workflows/: ci.yml
clickhouse_config/: 00-listen-all.xml  memory.xml
config/: markets.txt
context/: PRODUCTION_PLAN.md  PROJECT_STRUCTURE.md  rest-openapi.yaml
context/notes/: CH_DATABASE.md  Health_check.md  db_analytics.md  dec3.md  dec4.md  dec4_gaps.md  dec5.md  dec_30_ch_issues.md  ec2_trim.md  logs_info.md  lopsided_verification.md  main.md  oct8.md  todo_logs.md
infra/: backtest_runbook.md
infra/clickhouse_checks/: latest_levels_drift.sql
infra/clickhouse_migrations/: 001_latest_levels_v2_create_and_backfill.sql  010_inventory_observability.sql
infra/queries/: diagnose_fill_volume.sql  latest_levels_mismatch.sql
minimal_mm_sqlite/: README.md  config.py  db.py  engine.py  exec_client.py  market_selector.py  markets.txt  md_ws.py  run.py  util.py
minimal_mm_sqlite/minimal_mm_sqlite/: __init__.py  engine.py  run.py  (+3 more)
src/: envTest.py  logging_config.py  workflow_logger.py
tests/: test_broker_actions.py  test_cli_args.py  test_e2e_fixture.py  test_fill_cross.py  test_fill_touch.py  test_md_recovery.py  test_md_staleness.py  test_price_helpers.py
(+191 files in other folders)
